<resources>
    <string name="app_name" translatable="false">JustDoIt</string>

    <string-array name="priority_array" translatable="false">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string name="hint_title">Inserisci titolo</string>
    <string name="hint_description">Inserisci descrizione</string>
    <string name="hint_date">Scegli una data</string>
    <string name="hint_time">Scegli un orario</string>
    <string name="hint_class">Scegli una classe</string>
    <string name="hint_priority">Specifica una priorità</string>

    <string name="placeholder_title">Titolo</string>
    <string name="placeholder_description">Descrizione</string>
    <string name="placeholder_date">Data</string>
    <string name="placeholder_time">Ora</string>
    <string name="placeholder_class">Classe</string>
    <string name="placeholder_priority">Priorità</string>

    <string name="choose_class">Scegli una classe</string>
    <string name="choose_priority">Specifica una priorità</string>

    <string name="delete_task_req">Vuoi cancellare la task?</string>
    <string name="delete_task_conf">Task eliminata</string>
    <string name="delete_task">Cancella</string>
    <string name="undo">Annulla</string>

    <string name="date_set">Data selezionata</string>
    <string name="time_set">Ora selezionata</string>

    <string name="task_completed">Task completata</string>
    <string name="task_started_now">Task iniziata</string>

    <string name="action_completed_tasks">Task completate</string>
    <string name="action_all_tasks">Tutte le task</string>
    <string name="action_active_tasks">Task attive</string>
    <string name="action_statistics">Statistiche</string>
    <string name="action_ongoing">Task in svolgimento</string>

    <string name="completed_tasks">Task completate:</string>
    <string name="active_tasks">Task attive:</string>
    <string name="all_tasks">Task totali:</string>
    <string name="number_placeholder">0</string>

    <string name="no_desc">Nessuna descrizione</string>
    <string name="title_err">Inserisci un titolo</string>
    <string name="no_date_time">Inserisci una scadenza</string>
    <string name="date_time_err">Seleziona una scadenza futura</string>
    <string name="dialog_err">Sono presenti errori</string>
    <string name="dialog_ok">Ok</string>

    <string name="channel_name">Tasks notifications</string>
    <string name="channel_description">Notifiche per task scadute</string>

    <string name="task_due">Task scaduta</string>

    <string name="nav_drawer_open">Apri navigation drawer</string>
    <string name="nav_drawer_close">Chiudi navigation drawer</string>

    <string name="label_priority">Priorità:</string>
    <string name="label_class">Classe:</string>

    <string name="task_complete">Completa la task</string>
    <string name="task_ongoing">Inizia la task</string>

    <string name="priority_label">Priorità:</string>
    <string name="class_label">Classe:</string>
    <string name="deadline_label">Scadenza:</string>
    <string name="filters">Filtra per:</string>

    <string name="class_name">Inserisci un nome per la classe:</string>
    <string name="delete_class_req">Vuoi cancellare la classe?</string>
    <string name="delete_class_conf">Classe eliminata</string>
    <string name="new_class">Crea</string>
    <string name="insert_name_hint">Inserisci un nome</string>

</resources>
