<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.StatisticsFragment">

    <TextView
        android:id="@+id/text_view_active"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:layout_marginLeft="18dp"
        android:text="@string/active_tasks"
        app:layout_constraintBaseline_toBaselineOf="@+id/active_number"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/active_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="18dp"
        android:text="@string/number_placeholder"
        app:layout_constraintStart_toEndOf="@+id/text_view_active"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_view_completed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/completed_tasks"
        app:layout_constraintBaseline_toBaselineOf="@+id/completed_number"
        app:layout_constraintStart_toStartOf="@+id/text_view_active" />

    <TextView
        android:id="@+id/completed_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:layout_marginLeft="6dp"
        android:layout_marginTop="7dp"
        android:text="@string/number_placeholder"
        app:layout_constraintStart_toEndOf="@+id/text_view_completed"
        app:layout_constraintTop_toBottomOf="@+id/active_number" />

    <TextView
        android:id="@+id/text_view_all"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/all_tasks"
        app:layout_constraintBaseline_toBaselineOf="@+id/text_view_all_number"
        app:layout_constraintStart_toStartOf="@+id/text_view_completed" />

    <TextView
        android:id="@+id/text_view_all_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="9dp"
        android:text="@string/number_placeholder"
        app:layout_constraintStart_toEndOf="@+id/text_view_all"
        app:layout_constraintTop_toBottomOf="@+id/text_view_completed" />

</androidx.constraintlayout.widget.ConstraintLayout>